--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -1,16 +1,18 @@
-authPage{
-    /* height: 100vh;
-  box-sizing: border-box;
+.authPage{
   display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center
 }
 
 .formBox{
-  height: 100vh;
+  height: 55vh;
+  width: 80vh;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
+  border-radius: 2%;
+  
   background-image: linear-gradient(to right, #FF70A6, #FF9770, #FFD670 );
 }
